@@ -2,6 +2,7 @@
   "en_US",
   "ar_SA",
   "pt_BR",
+  "ru_RU",
   "de_DE",
   "fr_FR",
   "ro_RO",
