@@ -1,0 +1,287 @@
+# To translators: Start on genericMessages
+languageProperties:
+  code: "ru_RU"
+  language: "Русский"
+  country: "Russia"
+  flag: "🇷🇺"
+  languageName: "Русский"
+  translators: "ipdan4ik#3389, alexcancker#0135"
+  version: "1.6.3"
+
+genericMessages:
+  alreadyPlaying: "Игра уже запущена на %s!\nВведите `%sstop` чтобы остановить игру."
+  noGamesInChannel: "Нет запущенных игр на этом канале.\nВведите `%shelp` чтобы выбрать и начать игру!"
+  invalidLanguage: "Недействительный язык."
+  notEnoughTokens: 
+    beggining: "У вас недостаточно токенов чтобы сделать это (Не хватает %s)."
+    upvote: "\nПолучи больше токенов играя в игры и голосуя за бота на %s."
+
+  nth1: "ый"
+  nth2: "ой"
+  nth3: "ий"
+  nth4: "ый"
+  upvoteMessage: "Спасибо то, что проголосовали за GamesROB!\nВы заработали:\n**%s**\nПроголосовали подряд: **%s дней**\nПродолжайте голосовать, чтобы получать больше наград!"
+  ownersOnly: "Команда доступна только для администратора."
+  blacklisted: "⛔ Вы были занесены в чёрный список бота GamesROB %s (%s).\nПричина: %s"
+  blacklistedNoInfo: "⛔ Вы были занесены в чёрный список бота GamesROB."
+
+gameFramework:
+  singleplayerMatch: "**%s Одиночная игра!**\n%s\n\n"
+  multiplayerMatch: "**%s Многопользовательская игра!**\n%s\n\n"
+  joinToPlay: "🚪 Введите `%sjoin` или нажмите на дверь ниже, чтобы начать игру! (%s/%s)"
+  joinToPlayNoReaction: "🚪 Введите `%sjoin` чтобы начать игру! (%s/%s)"
+  betting: "💰 Ваша ставка: %s 🔸 токенов!"
+  begin: "**Игра началась!**\n**%s**\n%s\n\n"
+  join: "%s присоединился к игре! %s/%s"
+  left: "%s вышел из игры!"
+
+  requireBetting: "Для игры нужна ставка!\nДобавьте `bet=количество` в конец команды для выбора размера ставки."
+  settingOutOfRange: "Параметр `%s` должен находиться между %s и %s!"
+  activeGame: "Другая игра уже запущена на этом канале."
+  viewPlayers: "Посмотри список игроков с помощью команды `%slistplayers`."
+  viewPlayersStop: "Посмотри список игроков с помощью команды `%slistplayers` и останови игру с помощью `%sstop`."
+  typeToJoin: "Введите `%sjoin` чтобы войти."
+  playersOutOfRange: "В игре может находиться от %s до %s игроков!"
+
+  gameOver: "**Игра завершена!**\n%s\n\n"
+  winner: "%s выиграл!"
+  draw: "Ничья!"
+  timeout: "Время вышло после **%s**."
+  creatorQuit: "%s игра была отменена, так как создатель вышел."
+  everyoneQuit: "Игра была отменена, так как все игроки вышли."
+
+  now: " - **Ходит сейчас**"
+  next: " - **Следующий**"
+  turn: "Ходит %s"
+
+  rematch: "Тыкни в :arrows_counterclockwise: чтобы начать заново!"
+
+game:
+  roulette:
+    name: "Русская рулетка"
+    shortDescription: "Крути барабан, но не попади в себя"
+    longDescription: "Один патрон, 8 дырок.\nКрути барабан и надейся на свою удачу, когда нажмёшь курок!"
+
+    chooseStrength: "🔫 С какой силой ты будешь крутить барабан?\nОтправь число от %s до %s."
+    shot: "%s нажимает на курок и получает выстрел! Какая неудача!"
+    survive: "%s нажал на курок и выстрел оказался холостым."
+  connectFour:
+    name: "Четыре в ряд"
+    shortDescription: "Выложи 4 фишки своего цвета в один ряд!"
+    longDescription: "Вам нужно расположить подряд по горизонтали, вертикали или диагонали четыре фишки своего цвета!"!\nНапиши в чат номер ряда, в который вы хотите поместить фишку"
+  hangman:
+    name: "Виселица"
+    shortDescription: "Попробуй угадать слово, загаданное ведущим!"
+    longDescription: "Ведущий отправляет секретное слово боту в личные сообщения.\nПосле этого, другие игроки пытаются отгадать его по буквам!"
+
+    sendWord: "Для начала, %s: отправь слово в личные сообщения боту!"
+    wordSet: "**Слово выбрано!**\nВы можете вернуться в %s."
+    wordPicked: "Слово загадано!"
+    invalidGuess: "%s назвал букву %s, и не отгадал!"
+    validGuess: "%s отгадал букву %s!"
+    outOfLimbs: "У %s не осталось конечностей! Хорошая попытка!"
+  minesweeper:
+    name: "Сапёр"
+    shortDescription: "Сапёр! Не взорвись!"
+    longDescription: "Отправь номер клетки, которую ты хочешь выкопать (например: c4). На её месте появится число бомб рядом с этой клеткой.\nСтарайся не выкопать бомбу! Ты можешь поставить флаг добавив F (например: e1F)"
+
+    bomb: "Ха-ха, ты умер!"
+    left: "Игрок вышел"
+  tictactoe:
+    name: "Крестики-нолики"
+    shortDescription: "Расположи три своих фигуры в ряд!"
+    longDescription: "Ты уже знаешь правила!\nПросто отправь номер клетки в чат."
+  detective:
+    name: "Детектив"
+    shortDescription: "Один из вас убийца. Найдите его пока не поздно."
+    longDescription: "Убийца может прикончить кого-нибудь каждую ночь.\nЖители могут изгонять одного из игроков каждый день.\nПопытайтесь найти его пока не стало слишком поздно."
+
+    invalidUser: "Этот пользователь не в игре или уже мертв/изгнан"
+    assassinKicked: "Убийца найден! Наконец, город может спать спокойно."
+    murderReveal: "%s был убийцей!"
+
+    sleep: "🌇 Город засыпает."
+    sleepIndecisive: "🌇 Город засыпает, не решаясь никого изгнать. Чем это обернется?"
+    sleepKicked: "🌇 Город засыпает, уверенно изгнав %s за покушение на убийство.\nМало кто знает, что это не тот, кого должны были изгнать..."
+
+    chooseKick: "\nВместе, горожане должны выбрать того, кто понесет наказание за этот ужасный поступок, и мы изгоним убийцу во имя правосудия.\nГолосуй за того человека, который по твоему мнению должен быть изгнан:\n"
+    wakeFirst: "🌆 Город просыпается, с удивлением обнаруживая, что %s был заколот в собственном доме. Зачем кто-то это сделал?"
+    wakeSecond: "🌆 Город просыпается, на этот раз потеряв %s, который был заколот, снова, в своем доме. Говорят, два раза - всего лишь совпадение, правда?"
+    wakeThird: "🌆 Город просыпается. We're definitely in \"pattern\" territory surrounding %s's stabbing."
+    wakeFourthPlus: "🌆 Город просыпается, вновь недосчитавшись одного человека, и это был %s. Когда же это закончится?"
+
+    dmCitizen: "🏙 Ты - мирный горожанин."
+    dmAssassin: "🗡 Ты убийца!\nКому не посчастливится первому? (Пришли его ник сюда)"
+    dmAssassinRecursive: "Кто на этот раз? (Пришли его ник сюда)"
+  quiz:
+    name: "Викторина"
+    shortDescription: "Знаешь ли ты все ответы?"
+    longDescription: "Кто сможет первым ответить на все вопросы?\nПришли тот вариант ответа, который по-твоему является правильным. \nТот, кто получит больше очков в конце игры - победитель!"
+
+    revealAnswer: "%s\nПравильный ответ был: %s\n"
+    cantPlay: "%s:Ты уже предложил свой вариант! Подожди до следующего раунда."
+    answer: "%s (+%s очков) дал правильный ответ!"
+    noOneAnswered: "Никто не смог ответить! Правильный ответ был \"**%s**\"."
+
+  achievement:
+    got: "Получено достижение: **%s**!\n*%s*\n+🔸 %s токенов"
+
+    # Types
+    playGames: "Сыграй %s игр"
+    winGames: "Выиграй %s игр"
+    gambleTokens: "Поставь %s токенов"
+    winTokensGambling: "Выиграй %s токенов"
+    loseTokensGambling: "Проиграй %s токенов"
+    reachPlaceLeaderboard: "Достигни %sого места в таблице лидеров"
+    reachTokens: "Накопи %s токенов"
+
+    # Achievements
+    realPlayer: "Настоящий игрок"
+    intensePlayer: "Сильный игрок"
+    proPlayer: "Профессионал"
+    tooManyGames: "Слишком много игр"
+
+    crowned: "#Коронованый"
+    master: "Мастер"
+    tooGood: "Слишком хорош"
+    tryhard: "Tryhard"
+
+    gambler: "Азартный"
+    addicted: "Зависимый"
+    highRoller: "Крупный игрок"
+
+    onARoll: "В ударе"
+    lucky: "Удачливый"
+    rigged: "Шулер!!"
+
+    unfair: "Это нечестно!"
+    overconfident: "Самонадеянный"
+    stubborn: "Упрямый"
+
+    winnerWinnerChickenDinner: "Winner winner chicken dinner"
+    mediumClass: "Средний класс"
+    upperClass: "Высший класс"
+    richBoi: "Богач" 
+    billGates: "Буквально Билл Гейтс"
+
+command:
+  permissionLock: "⛔ Ты не можешь использовать эту команду!"
+
+  slots:
+    matchHeader: "Играем за 🔸 %s токенов..."
+    matchEnd: "Ты %s 🔸 %s токенов!"
+    earnt: "выиграл"
+    lost: "проиграл"
+
+    invalidTokens: "Ты можешь поставить только от %s до %s токенов."
+    description: "Играй в игровой автомат за свои токены! Это точно не подкручено, поверь мне"
+
+  tokens:
+    other: "%s имеет 🔸 %s токенов"
+    own: "Ты имеешь 🔸 %s токенов\nВот несколько способов получить еще:"
+    winningMatches: "**Побеждай в играх**"
+    upvoteCan: "Проголосуй за бота (%s days in a row = + 🔸 %s tokens!)"
+    upvoteLater: "~~Проголосуй за бота~~ (Ты сможешь снова сделать это через %s)"
+    achievements: "**Выполняй достижения:**\n"
+    noAchievements: "~~Выполняй достижения~~ (Нет доступных достижений)"
+
+    description: "Посмотри сколько токенов ты или кто-либо ещё имеют, а также проверь свой прогресс в достижениях"
+  join:
+    alreadyOnMatch: "Ты уже в игре!"
+    full: "Игра уже заполнена!"
+    gameStarted: "Эта игра уже началась!"
+    description: "Присоединись к игре на этом канале"
+  stop:
+    matchStopped: "⏹ Игра остановлена %s"
+    description: "Останавливает текущую игру"
+  listplayers:
+    header: "**%s**\n%s\n\n"
+    description: "Список игроков в текущей игре на этом канале"
+  
+  leaderboard:
+    unknownUser: "*неизвестный пользователь*"
+    playerRatings: " (**%s** побед)"
+    noWinner: "~Пока ещё нет победителя~"
+    response: "**Общая статистика**\n%s\n**Статистика по играм:**\n%s"
+    websiteLink: "Посмотри все на нашем сайте"
+    description: "Посмотри таблицу лидеров!"
+  profile:
+    playerStats: "Статистика игрока **%s**:\n"
+    overall: "%s **Общая статистика**: %s\n\n"
+    statsString: "%s%s Побед, %s Поражений (Соотношение W/L: %s), %s Игр сыграно"
+    place: "место"
+    description: "Посмотри свой профиль, или профиль кого-либо ещё!"
+    notRanked: "Нет рейтинга"
+  emote:
+    set: "Ваш смайл был установлен! %s"
+    reset: "Ваш смайл был удален!"
+    cannotUse: "Я не могу использовать этот смайл! Попробуй добавить его на этот сервер."
+    invalid: "Извините, но этот смайл не подходит..."
+    description: "Измени смайл, которым ты будешь отображаться в играх!"
+
+  userlang:
+    set: "Ваш язык изменён на %s"
+    description: "Смена вашего языка."
+  guildlang: 
+    set: "Язык по умолчанию для этой гильдии изменён на %s"
+    description: "Смена языка по умолчанию для гильдии."
+
+  help:
+    beginning: "**<:GamesROBNew:456913958457049109> GamesROB v%s** *by deprilula28*\n\n"
+    subCategory: "Используйте `%%PREFIX%%help категория/команда` для получения информации о команде или о категории (например: `%%PREFIX%%help profilecomamnds` или `%%PREFIX%%help slots`)"
+    gameString: "%s `%%PREFIX%%%s` - %s"
+    commandInfo: "`%s%s`: %s\nАльтернативные команды: %s\nКатегория: %s"
+    gameInfo: "`%s%s`: %s\n\n**Полное описание**\n%s\n\nАльтернативные названия: %s\nБольше информации: %s"
+    categories:
+      games: "Игры"
+      profilecommands: "Профиль"
+      servercommands: "Сервер"
+      matchcommands: "Игра"
+      infocommands: "Информация"
+    other: "%s другое"
+
+    websiteTitle: "Взгляни на наш сайт"
+    description: "Получи небольшую помощь!"
+  invite:
+    embed:
+      title: "Нажми, чтобы пригласить GamesROB на сервер!"
+      description: "Требуется разрешение Управление Сервером, чтобы добавить бота."
+    description: "Пригласи бота на сервер!"
+  info:
+    embed2:
+      description: "**Бот с весёлыми играми в вашем Дискорде!**"
+      statistics:
+        title: "📟 Статистика"
+        description: "📶 **%s** серверов\n👥 **%s** пользователей\n🗨 **%s** текстовых каналов\n🎮 **%s** игр (**%s** активно)\n❗ **%s** команд\n📈 **%s** голосов на DBL"
+      versions:
+        title: "📁 Версии"
+        description: "Версия GamesROB: **%s**\nВерсия Java: **%s**\nВерсия [JDA](%s): **%s**\nВерсия [JDA Framework](%s): **%s**\nShard Uptime: **%s**"
+      system:
+        title: "💻 Система"
+        description: "ОЗУ: **%s**\nОС: **%s**\nShard: **%s/%s** (**%s**)"
+      links:
+        title: "🔗 Полезные ссылки"
+        description: "🌐 [Наш сайт](%s)\n➕ [Добавь бота на сервер](%s)\n🗒 [Исходный код бота](%s)\nℹ️ [Наш сервер поддержки](%s)\n❤ [Credits](%s)\n⬆ [Проголосуй за бота в DBL](%s)"
+    description: "Статистика и информация"
+  raminfo:
+    message: ":Компьютер: Использование ОЗУ\nОбщее: **%s**\nКомандная оболочка: **%s**\nShards: **%s**\nКэш: **%s**\nИгры: **%s**"
+    description: "🗄 *Отладка* Полный отчёт об использовании ОЗУ"
+  ping:
+    message: "🏓 Pong!\nБот -> Discord: %s\nВы -> Бот: %s\nВеб-сокет: %s\nСреднее время обработки команд: %s"
+    description: "🗄 *Отладка* Задержка бота"
+  changelog:
+    text: "**GamesROB v%s**\nFrom %s\n\n%s\n\n*Обновления обычно происходят каждую пятницу. Следующее обновление %s.*\n*Вы можете предлагать новые функции и исправления ошибок на нашем сервере: %s*"
+    description: "Показывает все изменения в последнем обновлении."
+
+  perm:
+    invalidPerm: "Недостаточно прав!"
+    noRole: "Не могу найти роль с таким именем!"
+    set: "🔨 Установить права для %s игр для пользователей с ролью (или ролями выше) `%s`"
+    reset: "🔨 %s разрешение было изменено!"
+    description: "Редактируй права пользователей"
+  setprefix:
+    message: "Префикс бота успешно изменён на этом сервере!"
+    description: "Установи префикс для команд бота!"
+
+achievements:
+
